--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -164,7 +164,7 @@ p {
 a, a:link {
 	text-decoration: none;
 	color: #228B22;
-	border-bottom: .1em dotted rgba(34,139,34,.55);
+	border-bottom: .1em dotted rgba(34,139,34,.55); 
 }
 
 a:visited {
@@ -182,6 +182,10 @@ a:focus {
 	// background-color: rgba(152,251,152,.75);
 	color: #fff;
 	text-shadow: 1px 1px #228B22;
+}
+
+a img {
+	border-bottom: 3px solid $green;
 }
 
 a:active {
@@ -284,8 +288,9 @@ figure {
 
 figcaption {
 	font-style: italic;
-	font-weight: 300;
-	font-size: 0.707em;
+	font-weight: 400;
+	font-size: 1.125em;
+	line-height: 1.5rem;
 	background-color: #f5f5f5;
 	display: block;
 	width: 100%;
