--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -164,7 +164,7 @@ p {
 a, a:link {
 	text-decoration: none;
 	color: #228B22;
-	border-bottom: .1em dotted rgba(34,139,34,.55); 
+	/* border-bottom: .1em dotted rgba(34,139,34,.55); */ 
 }
 
 a:visited {
