--- a/css/style.css
+++ b/css/style.css
@@ -1603,33 +1603,72 @@ textarea {
   margin-bottom: 3rem; }
 
 /* line 533, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+.newsbox * {
+  transition: all 200ms ease-in; }
+
+/* line 537, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
 .newsbox {
   display: block;
+  position: relative;
   border: none;
   overflow: hidden;
   float: left;
   font-size: 0;
-  transition: all 200ms ease-in; }
-  /* line 540, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
-  .newsbox img {
-    margin: 0;
-    border-bottom: 3px solid #6B8E23; }
-  /* line 544, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  height: 19rem; }
+  /* line 545, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .newsbox figcaption {
+    position: absolute;
+    top: 13rem;
     font-size: 1.125rem;
-    color: #666666; }
-  /* line 548, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    color: #666666;
+    height: 19rem;
+    border-top: 3px solid #6B8E23; }
+    /* line 552, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .newsbox figcaption p {
+      color: #505050;
+      font-size: 0.8rem;
+      opacity: 0; }
+  /* line 558, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .newsbox small {
+    height: 100%;
+    opacity: 0;
+    -webkit-transform: translateY(20px);
+        -ms-transform: translateY(20px);
+            transform: translateY(20px); }
+  /* line 563, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
   .newsbox .readmore {
-    font-size: 0.707em;
-    margin: 1.414em 0 0.5em;
-    line-height: 1.2;
-    color: #228B22;
-    font-size: 0.707em; }
-  /* line 556, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
-  .newsbox:hover figcaption {
-    background-color: rgba(119, 201, 81, 0.15);
-    transition: all 300ms ease-in; }
-  /* line 560, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
-  .newsbox:hover .readmore {
-    color: rgba(34, 139, 34, 0.55);
-    text-align: right; }
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    overflow: hidden;
+    margin: 1.414em 0 0;
+    height: 2.5rem;
+    width: 100%;
+    padding-left: 1rem;
+    background-color: #f5f5f5;
+    line-height: 2.5rem;
+    font-size: 0.95rem;
+    font-weight: 400;
+    color: #228B22; }
+  /* line 578, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+  .newsbox:hover, .newsbox:focus, .newsbox:active {
+    border-bottom: 3px solid #77c951; }
+    /* line 580, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .newsbox:hover figcaption, .newsbox:focus figcaption, .newsbox:active figcaption {
+      background-color: #f5f5f5;
+      border-top: none;
+      height: 19.5rem;
+      top: 0; }
+      /* line 585, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+      .newsbox:hover figcaption p, .newsbox:focus figcaption p, .newsbox:active figcaption p {
+        opacity: 1; }
+    /* line 589, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .newsbox:hover img, .newsbox:focus img, .newsbox:active img {
+      opacity: 0; }
+    /* line 592, /Users/gabrielayon/Documents/Algonquin College/6th Sem Winter/Web Dev/non-profit-website/scss/components/main */
+    .newsbox:hover small, .newsbox:focus small, .newsbox:active small {
+      opacity: 1;
+      -webkit-transform: translateY(0px);
+          -ms-transform: translateY(0px);
+              transform: translateY(0px);
+      background-color: #ECF7E8; }
