feat(p&m): content fill for newsboxes

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,13 +30,20 @@
 
 			<nav class="unit unit-xs-1 top-nav" data-state="collapse" role="navigation">
 				<ul class=" unit unit-s-1 unit-m-1 unit-l-1">
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="about.html">About Us</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="what-we-do.html">What We Do</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="media.html">Partners &amp; Media</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="advocacy.html">Our Advocacy</a></li>
-					<li class="unit unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a></li>
+					<li class="unit unit-s-1-5 unit-m-1-5 unit-l-1-5"><a href="about.html">About Us</a></li>
+					<li class="unit unit-s-1-5 unit-m-1-5 unit-l-1-5"><a href="what-we-do.html">What We Do</a></li>
+					<li class="unit unit-s-1-5 unit-m-1-5 unit-l-1-5"><a href="media.html">Partners &amp; Media</a></li>
+					<li class="unit unit-s-1-5 unit-m-1-5 unit-l-1-5"><a href="advocacy.html">Our Advocacy</a></li>
+					<li class="unit unit-s-1-5 unit-m-1-5 unit-l-1-5"><a href="donate.html">Donations</a></li>
+					<li class="unit"><a href="#">Log In</a></li>
+					<li class="unit"><a href="#">Register</a></li>
 				</ul>
 			</nav>
+
+			<ul class="lr-btn">
+				<li class="unit"><a href="#">Log In</a></li>
+				<li class="unit"><a href="#">Register</a></li>
+			</ul>
 
 		</header>
 
