--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -144,12 +144,14 @@ html {
 	}
 
 	.top-nav ul {
+		display:none;
 		position: fixed;
 		opacity: 0;
 		background-color: $dark-grey;
 		height: 100vh;
 		width:100%;
-		top:0em;
+		margin-top: 5em;
+		top:0;
 		z-index:0;
 			li {
 				width: 100%;
@@ -163,12 +165,15 @@ html {
 				text-align:center;
 				border-bottom: none;
 				letter-spacing: 1px;
+				display:none;
 			}
 	}
 
-	.top-nav[data-state="expand"] ul {
+	.top-nav[data-state="expand"] ul,
+	.top-nav[data-state="expand"] ul li a {
 		opacity: .9;
 		z-index: 10;
+		display:inline-block;
 	}
 
 }
@@ -179,6 +184,7 @@ html {
 	@include zero;
 	@include ease(all, 250ms, linear);
 	font-size: 0;
+	display:none;
 	position: absolute;
 	bottom: 0;
 	text-align: center;
@@ -196,7 +202,7 @@ html {
 				color: $light-grey;
 				padding: 1em 0;
 				width:100%;
-				display:block;
+				display:none;
 				background-color:$dark-grey;
 				opacity: .9;
 			&:hover {
@@ -473,6 +479,10 @@ input:focus {
 	.log-reg-wrapper {
 		padding: 17% 36%;
 	}
+}
+
+.top-nav- ul li a {
+	display:none;
 }
 
 
