refactor(html): not a member(?)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
 					<h2>Log In</h2>
 					<p><input class="email-add-field" type="text" placeholder="Email Address"></p>
 					<p><input class="password-field" type="password" placeholder="password"></p>
-					<a class="register-toggle" href="">Not a member. Register here</a>
+					<a class="register-toggle" href="">Not a member? Register here</a>
 				</form>
 			</div>
 
