fix(sass): toggle nav

--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -4,10 +4,6 @@
 @-webkit-viewport { width: device-width; scale: 1; }
 @viewport { width: device-width; scale: 1; }
 
-body,
-html {
-	overflow: hidden;
-}
 
 .header {
 	width:100%;
@@ -15,6 +11,7 @@ html {
 	background: url("../images/bg-placeholder.jpg") no-repeat center center;
 	background-size: cover;
 	padding: 6em 0em;
+	overflow:hidden;
 }
 
 .tag-line {
@@ -139,13 +136,13 @@ html {
 
 // Navigation Overlay
 
-	.no-scroll {
+.no-scroll {
 		overflow:hidden;
 	}
 	.top-nav ul {
 		display:none;
 		position: fixed;
-		opacity: 0;
+		opacity: 1;
 		background-color: $dark-grey;
 		height: 100vh;
 		width:100%;
@@ -164,14 +161,7 @@ html {
 				text-align:center;
 				border-bottom: none;
 				letter-spacing: 1px;
-				display:none;
 			}
-	}
-	.top-nav[data-state="expand"] ul,
-	.top-nav[data-state="expand"] ul li a {
-		opacity: .9;
-		z-index: 10;
-		display:inline-block;
 	}
 }
 // Big Screen Navigation Styling
@@ -179,15 +169,16 @@ html {
 	@include zero;
 	@include ease(all, 250ms, linear);
 	font-size: 0;
-	display:none;
+	display:block;
 	position: absolute;
 	bottom: 0;
 	text-align: center;
-	display:block;
+	background-color: $dark-grey;
 			li {
 			font-size: 1rem;
 			letter-spacing: 1px;
 			border-right: 2px solid $black;
+			padding: 1em 0;
 			&:last-child {
 				border-right:none;
 			}
@@ -195,17 +186,27 @@ html {
 				@include ease(all, 250ms, linear);
 				border-bottom:none;
 				color: $light-grey;
-				padding: 1em 0;
 				width:100%;
-				display:none;
-				background-color:$dark-grey;
 				opacity: .9;
-			&:hover {
-				background-color: $black;
-				opacity:1;
-				}
 			}
 		}
+}
+@media only screen and (max-width: 600px) {
+	.top-nav ul {
+		display:none;
+	}
+	header {
+		overflow:visible !important;
+	}
+}
+.top-nav[data-state="expand"] ul,
+.top-nav[data-state="expand"] ul li a {
+	opacity: .9;
+	z-index: 10;
+	display:inline-block;
+}
+.top-nav li:hover a {
+	opacity: .5;
 }
 // Log In & Register
 .top-nav ul li:nth-child(6),
@@ -467,9 +468,6 @@ input:focus {
 	.register-wrapper {
 		padding: 12% 28%;
 	}
-}
-.top-nav- ul li a {
-	display:none;
 }
 
 
